--- a/style.css
+++ b/style.css
@@ -3,10 +3,36 @@
     margin: 0;
     font-family: 'Kiwi Maru', serif;
     /* font-family: 'M PLUS Rounded 1c', sans-serif; */
-
 }
 
 /* landing page */
+
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 15px;
+    border: none;
+    outline: none;
+    background-color: rgb(255, 93, 110, 0.88);
+    color: white;
+    cursor: pointer;
+    padding: 18px;
+    border-radius: 90px;
+    box-shadow: 0px 0px 8px 2px rgb(6, 24, 15, 0.3);
+}
+
+#myBtn:hover {
+    background-color: rgb(6, 24, 15, 0.7);
+}
+
+.arrow {
+    width: 20px;
+    filter: brightness(0) invert(1);
+    padding-right: 5px;
+}
 
 #lp-container-laptop {
     height: 90vh;
@@ -14,15 +40,27 @@
     background-size: auto 100%;
     background-repeat: no-repeat;
     background-position: center;
-
 }
 
 #logo-wrap {
     font-size: 1.8em;
     font-weight: bold;
-    width: 30%;
     display: flex;
+
+    align-items: center;
     justify-content: center;
+    width: max-content;
+}
+#logo-wrap p{
+    display: inline-block;
+    white-space: nowrap;
+}
+#logo-wrap a {
+    /* background-color: gold; */
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    width: fit-content;
 }
 
 #futaba-logo {
@@ -32,10 +70,7 @@
 
 nav {
     height: 80px;
-    box-shadow: -3px 23px 52px -26px rgba(0,0,0,0.75);
-}
-
-nav, .nav {
+    box-shadow: -3px 23px 52px -26px rgba(0, 0, 0, 0.75);
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -48,8 +83,10 @@ nav, .nav {
     width: 100%;
     max-height: 3%;
     background-color: rgb(46, 184, 114, 1);
-    display: flex;
+    /* display: flex; */
     justify-content: center;
+    /* position: fixed; */
+    top: 0;
 }
 
 #school-branch {
@@ -71,20 +108,16 @@ nav, .nav {
     /* background-color: aquamarine; */
 }
 
-.logo-sub {
-    display: flex;
-    flex-direction: column;
-}
-
 a {
     text-decoration: none;
     color: black;
 }
 
 #main-container {
+    position: absolute;
     /* background-color: cadetblue; */
     width: 40%;
-    margin-left: auto;
+    margin-left: 10%;
     height: 75%;
     display: flex;
     flex-direction: column;
@@ -108,7 +141,7 @@ a {
     font-weight: bold;
 }
 
-#btn-only-students {
+#btn-only-students-lp {
     background-color: rgb(255, 93, 110, 1);
     padding: 5px 10px;
     border-radius: 0.5em;
@@ -116,15 +149,183 @@ a {
     display: flex;
 }
 
-#btn-only-students>a {
+#btn-only-students-lp>a {
     text-align: center;
+    color: white;
+}
+
+#btn-only-students-mb {
+    display: none;
+    text-align: center;
+}
+
+#btn-only-students-mb a {
+    color: white;
+}
+
+@media only screen and (max-width: 900px) {
+    nav {
+        height: 60px;
+    }
+    #menu-wrap {
+        display: none;
+    }
+    /* #logo-wrap {
+        background-color: pink;
+    } */
+    #main-container {
+        width: 100%;
+        align-items: center;
+        font-size: smaller;
+        height: 90%;
+        margin-left: auto;
+    }
+    #btn-only-students-mb {
+        margin-top: 5%;
+        background-color: rgb(255, 93, 110, 1);
+        padding: 5px 20px;
+        border-radius: 0.5em;
+        font-size: 1em;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        color: white;
+    }
+}
+
+/* hamburger menu */
+
+.hamburger-wrap, .toggler {
+    position: absolute;
+    /* background-color: yellow; */
+    right: 0;
+    width: 40px;
+    height: 60px;
+    cursor: pointer;
+    z-index: 2;
+}
+
+.toggler {
+    opacity: 0;
+}
+
+.hamburger-wrap .hamburger {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    width: 40px;
+    height: 60px;
+    /* background: rgba(88, 88, 88, 0.2); */
+}
+
+#menu-list {
+    position: absolute;
+    /* background-color: rgb(46, 184, 114, 0.6); */
+    height: 400px;
+    width: 100%;
+    z-index: 3;
+    display: flex;
+    /* align-items: center; */
+    justify-content: center;
+    /* display: none; */
+}
+
+.menu-items {
+    background-color: rgba(72, 92, 82, 0.9);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: fit-content;
+    width: 80%;
+    padding: 10px;
+
+}
+
+.menu-items a {
+    padding: 20px 0;
+    width: 100%;
+    text-align: center;
+    color: white;
+}
+
+.menu-items a:hover {
+    background-color: white;
+    /* padding: 20px 0; */
+}
+
+.btns-wrap {
+    /* background-color: yellow; */
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    font-size: smaller;
+}
+
+/* Hamburger Line */
+
+.hamburger-wrap .hamburger>div {
+    position: relative;
+    flex: none;
+    width: 100%;
+    height: 2px;
+    background: rgba(88, 88, 88, 1.0);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.4s ease;
+}
+
+/* Hamburger Lines - Top & Bottom */
+
+.hamburger-wrap .hamburger>div::before, .hamburger-wrap .hamburger>div::after {
+    content: '';
+    position: absolute;
+    z-index: 1;
+    top: -10px;
+    width: 100%;
+    height: 2px;
+    background: inherit;
+}
+
+/* Moves Line Down */
+
+.hamburger-wrap .hamburger>div::after {
+    top: 10px;
+}
+
+/* Toggler Animation */
+
+.hamburger-wrap .toggler:checked+.hamburger>div {
+    transform: rotate(135deg);
+}
+
+/* Turns Lines Into X */
+
+.hamburger-wrap .toggler:checked+.hamburger>div:before, .hamburger-wrap .toggler:checked+.hamburger>div:after {
+    top: 0;
+    transform: rotate(90deg);
+}
+
+/* Rotate On Hover When Checked */
+
+.hamburger-wrap .toggler:checked:hover+.hamburger>div {
+    transform: rotate(225deg);
+}
+
+@media only screen and (min-width: 900px) {
+    .hamburger-wrap .menu-list {
+        display: none;
+    }
+    
 }
 
 /* about */
 
 #about-container-laptop {
-    font-family: 'Kiwi Maru', serif;
-
     display: flex;
     flex-direction: row;
     background-color: rgb(46, 184, 114, 1);
@@ -140,7 +341,9 @@ a {
     justify-content: center;
     align-items: center;
 }
-
+.title {
+    text-align: center;
+}
 #about-container-laptop img {
     height: 60px;
     padding: 5% 5% 5% 0;
@@ -174,6 +377,35 @@ a {
     padding: 5% 0;
 }
 
+@media only screen and (max-width: 900px) {
+    .title {
+        font-size: x-large;
+    }
+    #about-container-laptop {
+        flex-direction: column;
+    }
+    #about-left {
+        border-bottom: 5px solid white;
+        width: 100%;
+        border-right: none;
+    }
+    .wrap {
+        flex-direction: column;
+    }
+    #about-right {
+        width: 90%;
+        margin: 0 auto;
+    }
+    #about-left>h2 {
+        margin-left: none;
+        margin: 0 auto;
+    }
+    #about-left>h1 {
+        margin-left: none;
+        margin: 0 auto;
+    }
+}
+
 /* 3boxes-wrap */
 
 #wrap-3boxes {
@@ -182,6 +414,7 @@ a {
     padding: 50px 0;
     height: max-content;
     justify-content: space-evenly;
+    align-items: center;
 }
 
 .box {
@@ -192,6 +425,11 @@ a {
     background-position: center;
     box-shadow: 10px 1px 25px gray;
     color: white;
+    margin: 10% 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .box:hover {
@@ -201,9 +439,18 @@ a {
 .detail-btn {
     height: 50px;
 }
-
+.box img {
+    height: 60px;
+    padding: 30px;
+}
 .box a {
     color: white;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 #box1 {
@@ -212,6 +459,7 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-bottom: 10%;
 }
 
 #box2 {
@@ -220,6 +468,7 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-bottom: 10%;
 }
 
 #box3 {
@@ -228,18 +477,33 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-bottom: 10%;
 }
 
-.title-wrap {
+
+
+
+.detail-btn {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: transparent;
 }
 
-.title-wrap img {
-    height: 60px;
-    padding: 30px;
+.detail-btn:hover {
+    background-color: transparent;
+    box-shadow: 10px 1px 25px gray;
+    /* opacity: 0.5; */
+}
+
+@media only screen and (max-width: 900px) {
+    #wrap-3boxes {
+        flex-direction: column;
+    }
+    .box {
+        min-width: 280px; 
+        min-height: 280px;
+    }
 }
 
 /* map */
@@ -249,20 +513,33 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 70vh;
-    /* background-color: antiquewhite; */
-    background-image: url(/dist/img/matsugaoka-park.jpg);
-    background-size: 100% auto;
+    height: max-content;
+    background-color: black;
+    /* background-image: url(/dist/img/tables.jpg); */
+    /* background-size: 100% auto;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center; */
+    position: relative;
 }
+
+.map>img {
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+    position: absolute;
+    z-index: 0;
+}
+
 .map-titles {
     padding: 40px 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    z-index: 1;
+    color: white;
 }
+
 .map-container {
     display: flex;
     flex-direction: row;
@@ -270,7 +547,6 @@ a {
     justify-content: center;
     align-items: center;
     height: max-content;
-    margin-bottom: 5%;
 }
 
 .map-container>p {
@@ -283,10 +559,14 @@ a {
     background-color: white;
     width: 40%;
     padding: 40px 0;
+    z-index: 1;
+    height: 200px;
 }
+
 .map-detail-wrap {
     padding-left: 40px
 }
+
 .map-detail-container {
     display: flex;
     flex-direction: row;
@@ -301,17 +581,45 @@ a {
 
 #maps {
     background-color: tomato;
-    height: max-content;
-    width: 30%;
+    height: 200px;
+    width: 40%;
+    padding: 40px 0;
+    z-index: 1;
 }
 
 #map-phone img {
     padding: 0 8px;
 }
 
+@media only screen and (max-width: 900px) {
+    .map {
+        background-size: auto 100%;
+    }
+    .map-container {
+        flex-direction: column;
+    }
+    .map-wrap {
+        width: 80%;
+        padding: 0;
+        justify-content: center;
+        height: 160px;
+        font-size: smaller;
+    }
+    #maps {
+        width: 80%;
+        padding: 0;
+        height: 160px;
+    }
+    .map-detail-wrap {
+        font-size: smaller;
+        padding-left: 10px;
+    }
+}
+
 /* footer */
 
 .footer-container {
+    margin-top: 30%;
     background-color: #2EB872;
     height: auto;
     display: flex;
@@ -339,10 +647,17 @@ footer img {
 
 .copyright-wrap {
     color: white;
+    word-wrap: break-word;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: rgb(43, 161, 102);
     width: 100%;
     padding: 30px;
+}
+
+@media only screen and (max-width: 900px) {
+    .sitemaps-wrap {
+        flex-direction: column;
+    }
 }
